[package]
name = "addupstream"
version = "0.2.4"
authors = ["Pierre Zemb <contact@pierrezemb.fr>"]
edition = "2018"
license = "MIT"
description = "A small cli to automatically add upstream remotes to a Github project"
readme = "README.md"
homepage = "https://github.com/PierreZ/addupstream"
repository = "https://github.com/PierreZ/addupstream"
keywords = ["cli", "git", "github"]
categories = ["command-line-utilities"]

[dependencies]
structopt = "0.2"
git2 = "0.8"
log = "0.4"
regex = "1.1"
reqwest = "0.9.5"
serde = "1.0"
serde_json = "1.0"
simple-error = "0.1"